[package]
name = "tlv493d_a1b6_raspberry"
authors = ["Antoine deLAUNAY <antoine.delaunay@sii.fr>"]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Rust driver for tlv493d_a1b6 sensor on raspberry pi. Initially made by user ryankurte."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13.1", features = ["hal"] }
embedded-hal = "0.2.7"

#Other dependencies for the "sensor-tlv493d" crate, modified here 
bitflags = "1.2.1"
log = "0.4.11"