[package]
name = "tlv493d_a1b6"
authors = ["Antoine deLAUNAY <antoine.delaunay@sii.fr>"]
version = "0.3.1"
edition = "2021"
license = "MPL-2.0"
description = "Rust driver for tlv493d_a1b6 sensor on raspberry pi. Initially made by user ryankurte."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
embedded-hal = "0.2.7"
log = "0.4.11"
thiserror = { version = "1.0.40", optional = true }

[dev-dependencies]
rppal = { version = "0.13.1", features = ["hal"] }

[features]
std = ["dep:thiserror"]
default = ["std"]
